--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="title_activity_register">RegisterActivity</string>
     <string name="edit_task">Edit Task</string>
     <string name="set_reminder">Set Reminder</string>
+    <string name="facebook_app_id">1974141259378625</string>
 </resources>
